# ReviewArena

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  mprocs.yaml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-arxiv2md.yml  deploy-modal.yml  deploy-review-gen.yml
apps/api/: Dockerfile  README.md  drizzle.config.ts  package.json  tsconfig.json
apps/api/drizzle/: 0001_lmarena_pair_knobs.sql  0002_drop_pdf_path_not_null.sql  0003_vote_replay_protection.sql  0004_paper_uploaded_by_session.sql
apps/web/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
docs/: FAIRNESS.md  SECRETS.md  architecture.md  external-adapter-plan.md  structure.md  walkthrough.md
scripts/: setup-gcp-deployer.sh  thesis_eval.py  warm-modal.sh
services/modal/: README.md
services/review-gen/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/review-gen/app/: analytics.py  judge.py  main.py  metrics.py  paper_render.py  schemas.py
services/review-gen/app/adapters/: __init__.py  _budget.py  _review_parse.py  base.py  claude.py  cyclereviewer.py  deepreviewer_real.py  deepseek.py  gemini.py  gemini25flash.py  gemini3pro.py  gpt.py  gpt5.py  gpt5mini.py  openai_compat.py  openreviewer.py  sea.py  vllm_base.py
services/review-gen/app/parsing/: __init__.py  arxiv2md.py  chandra.py
src/app/: globals.css  layout.tsx  page.tsx
src/db/: schema.ts  seed.ts
src/utils/: queries.ts
(+78 files in other folders)
